--- a/css/moneytransfer.css
+++ b/css/moneytransfer.css
@@ -17,10 +17,9 @@ and open the template in the editor.
 .error-msg{
     color:red;
 }
-<<<<<<< Updated upstream
 .loginwrapper{
     margin-top: 40px!important;
-=======
+}
 .mt-anchore{
     color: #d6d6d6;
 }
@@ -28,5 +27,39 @@ and open the template in the editor.
 .mt-anchore:hover{
     color: #FFFFFF;
     text-decoration: none;
->>>>>>> Stashed changes
+}
+
+.info, .success, .warning, .error, .validation {
+    border: 1px solid;
+    margin: 10px 0px;
+    padding:15px 10px 15px 50px;
+    background-repeat: no-repeat;
+    background-position: 10px center;
+}
+
+.info {
+    color: #00529B;
+    background-color: #BDE5F8;
+    background-image: url('info.png');
+}
+.success {
+    color: #4F8A10;
+    background-color: #DFF2BF;
+    background-image:url('success.png');
+}
+.warning {
+    color: #9F6000;
+    background-color: #FEEFB3;
+    background-image: url('warning.png');
+}
+.error {
+    color: #D8000C;
+    background-color: #FFBABA;
+    background-image: url('error.png');
+}
+
+.custom-login{
+    padding: 60px 0px 60px 0px;
+    /*border: 2px solid blue;*/
+    position: relative;
 }
